--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_marginEnd="21dp"
         android:layout_marginStart="21dp"
         android:layout_marginTop="16dp"
+        android:text="0"
         android:textAlignment="textEnd"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
